# shopbot_jog

./: .coverage  LICENSE  Makefile  README.md  pyproject.toml
artifacts/: 1001 roughing pass.sbp  1001-bevel.sbp  1002-compression.sbp  1003-drill.sbp
src/libertyjog/: __init__.py  cli.py  core.py
src/shopbotjog/: __init__.py  cli.py  core.py  speed_analyzer.py
tests/: __init__.py  test_cli.py  test_core.py
